--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # API Keys for different services
 GEMINI_API_KEY="your_gemini_api_key_here"
-DEEPSEEK_API_KEY="your_deepseek_api_key_here"
+OPENROUTER_API_KEY="your_openrouter_api_key_here"
